--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 *{
     text-align: center;
     letter-spacing: 1px;
+       font-family: 'Avenir','Helvetica Neue','Helvetica','Arial','Hiragino Sans','ヒラギノ角ゴシック',YuGothic,'Yu Gothic','メイリオ', Meiryo,'ＭＳ Ｐゴシック','MS PGothic' ;
 }
 
 body>h1{
