py_jsのIEでのcss崩れの修正

--- a/markdown/py_js_src/src/style.css
+++ b/markdown/py_js_src/src/style.css
@@ -76,7 +76,7 @@ body {
     top: 30%;
     width: 40%;
     height: 40%;
-    background: #f0fbffc4;
+    background: #f0fbff;
     border-radius: 20px;
     padding: 50px;
     position: fixed;
