--- a/markdown/py_js_src/src/view/dark_theme.css
+++ b/markdown/py_js_src/src/view/dark_theme.css
@@ -1,10 +1,11 @@
-body.dark,
-body.dark .markdown-body pre {
-    background: rgb(46, 74, 105);
+body.dark {
+    background: rgb(22, 37, 53);
 }
 
 body.dark .markdown-body pre {
     border: white 1px solid;
+    background: black;
+    padding: 0;
 }
 
 body.dark,
@@ -14,7 +15,7 @@ body.dark .markdown-body {
 
 body.dark .markdown-body table tr,
 body.dark .markdown-body table td {
-    background: rgb(46, 74, 105);
+    background: transparent;
 }
 
 body.dark .markdown-body a {
