--- a/markdown/py_js_src/src/view/style.css
+++ b/markdown/py_js_src/src/view/style.css
@@ -1,5 +1,5 @@
 body {
-    padding: 40px;
+    padding: 2% 8%;
 }
 
 .markdown-body {
@@ -7,7 +7,8 @@ body {
     font-family: 'Noto Sans JP', sans-serif;
 }
 
-.markdown-body code, .markdown-body pre {
+.markdown-body code,
+.markdown-body pre {
     font-family: 'Source Code Pro', monospace;
 }
 
