py_jsにtsの簡単な文法説明を追記
css修正もした

--- a/markdown/py_js_src/src/view/dark_theme.css
+++ b/markdown/py_js_src/src/view/dark_theme.css
@@ -21,3 +21,7 @@ body.dark .markdown-body table td {
 body.dark .markdown-body a {
     color: #cee5ff;
 }
+
+body.dark .connection-status-box {
+    color: black;
+}
