--- a/markdown/py_js_src/src/view/dark_theme.css
+++ b/markdown/py_js_src/src/view/dark_theme.css
@@ -3,7 +3,6 @@ body.dark {
 }
 
 body.dark .markdown-body pre {
-    border: white 1px solid;
     background: black;
     padding: 0;
 }
@@ -24,4 +23,10 @@ body.dark .markdown-body a {
 
 body.dark .connection-status-box {
     color: black;
+}
+
+body.dark .markdown-body code {
+    border: #ababab 1px solid;
+    border-radius: 4px;
+    background: black;
 }
