--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -11,7 +11,7 @@ button{
     border-radius: 50%;
     border-style: none;
     transition: ease .5s;
-    appearance: button;
+    -webkit-appearance: none;
     padding: 0;
 }
 
