--- a/css/main.css
+++ b/css/main.css
@@ -56,9 +56,6 @@ body>h1::after{
 .Container>div li{
     list-style: none;
     text-align: left;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     width: calc(50% - 31px);
     margin: 15px;
     border: solid 4px skyblue;
@@ -67,7 +64,6 @@ body>h1::after{
     font-weight: bold;
     line-height: 36px;
     border-radius: 5px;
-    padding: 10px 0;
 }
 
 .Container>div h2{
@@ -93,9 +89,11 @@ body>h1::after{
 
 .Container>div li a{
     text-decoration: none;
-    display: block;
+    display: inline-block;
     color: black;
-    padding: 5px;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
+    padding: 10px;
     transition: all .3s;
 }
 
