--- a/git/css/chrome.css
+++ b/git/css/chrome.css
@@ -3,13 +3,13 @@
 @import 'variables.css';
 
 ::-webkit-scrollbar {
-    background: var(--bg);
+    background: var(--background-color);
 }
 ::-webkit-scrollbar-thumb {
     background: var(--scrollbar);
 }
 html {
-    scrollbar-color: var(--scrollbar) var(--bg);
+    scrollbar-color: var(--scrollbar) var(--background-color);
 }
 
 /* Menu Bar */
@@ -19,16 +19,30 @@ html {
     z-index: 101;
     margin: auto calc(0px - var(--page-padding));
 }
+
+html.dark #menu-bar {
+    border-bottom: 1px solid var(--theme-background);
+}
+
+html.dark #menu-bar h1 {
+    border-bottom: 0;
+}
+
 #menu-bar > #menu-bar-sticky-container {
     display: flex;
     flex-wrap: wrap;
-    border-bottom-color: var(--bg);
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-    background: var(--theme-background);
     color: white;
     font-weight: 400;
 }
+
+html.dark #menu-bar > #menu-bar-sticky-container {
+    border-bottom: 1px solid var(--background-color);
+}
+
+html:not(.dark) #menu-bar > #menu-bar-sticky-container {
+    background: var(--theme-background);
+}
+
 .js #menu-bar > #menu-bar-sticky-container {
     transition: transform 0.3s;
 }
@@ -43,6 +57,7 @@ html {
     cursor: pointer;
     transition: color 0.5s;
 }
+
 @media only screen and (max-width: 420px) {
     #menu-bar i, #menu-bar .icon-button {
         padding: 0 5px;
@@ -53,8 +68,8 @@ html {
     border: none;
     background: none;
     padding: 0;
-    color: inherit;
 }
+
 .icon-button i {
     margin: 0;
 }
@@ -62,6 +77,7 @@ html {
 .right-buttons {
     margin: 0 15px;
 }
+
 .right-buttons a {
     text-decoration: none;
 }
@@ -89,6 +105,7 @@ html:not(.sidebar-visible) #menu-bar:not(:hover).folded > #menu-bar-sticky-conta
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
 .js .menu-title {
     cursor: pointer;
 }
@@ -254,7 +271,7 @@ pre > .result {
     z-index: 1000;
     border-radius: 4px;
     font-size: 0.7em;
-    color: var(--fg);
+    color: var(--font-color);
     background: var(--theme-popup-bg);
     border: 1px solid var(--theme-popup-border);
     margin: 0;
